updates eslint for waypoints

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Rather than bend their individual voices toward a common style, our graduate cohorts push each other to follow an authentic path for their work. The evidence of their success can be found on every page herein. With their attention to craft and their sights set on pushing the boundaries of the form, there’s no doubt the future of comics is in good hands. </p>
 
             <p>At the end of their final year, our students have each produced a self-contained thesis project for print and a digital comic.</p>
-        </div
+        </div>
 
     </div>
 
