--- a/thesis.html
+++ b/thesis.html
@@ -49,7 +49,7 @@
     </div>
 
     <a href="/directory.html">
-        <div class="button" style="margin-top: 3em">
+        <div class="button" style="margin: 3em auto">
             <p>back to anthology</p>
         </div>
     </a>
