--- a/digital/18simpson/page5.html
+++ b/digital/18simpson/page5.html
@@ -4,6 +4,7 @@
 		<title>Desert Kingdom Pg5</title>
 			<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" text="css" href="style.css">
+			<!-- <meta charset="UTF-8"> -->
 	</head>
 
 	<body>
