adds nojekyll file

--- a/thesis.html
+++ b/thesis.html
@@ -92,7 +92,7 @@
     function makeThesisPage(imgUrl) {
 
 
-        var thesisPage = $('<div class="thesisPage"><img src="' + imgUrl + '"/></div>')
+        var thesisPage = $('<div class="thesisPage"><img src="' + imgUrl + '"/></div>');
 
         return thesisPage;
     }
@@ -145,7 +145,7 @@
 
             if (currentStudent) {
 
-                makeStudentThesis(currentStudent)
+                makeStudentThesis(currentStudent);
             }
 
         });
