removes slash in directory logo file

--- a/directory.html
+++ b/directory.html
@@ -26,7 +26,7 @@
         <div id="header">
             <div id="stickyHeader">
                 <a href="/">
-                    <img src='/images/ui/comicsLogo.svg' id="comics" alt="CCA MFA in Comics"/>
+                    <img src='images/ui/comicsLogo.svg' id="comics" alt="CCA MFA in Comics"/>
                 </a>
                 <a href="/">
                     <img src='images/ui/ccaLogo.svg' id="cca" alt="CCA" />
