removes some more bad boi slashes

--- a/directory.html
+++ b/directory.html
@@ -138,8 +138,8 @@
             let studentDiv = null;
             var name = student.displayName,
                     slug = student.slug,
-                    thesisUrl = '/thesis.html?student=' + slug,
-                    digitalUrl = '/digital/' + student.digitalUrl,
+                    thesisUrl = 'thesis.html?student=' + slug,
+                    digitalUrl = 'digital/' + student.digitalUrl,
                     thesisTitle = student.thesisTitle,
                     digitalTitle = student.digitalTitle,
                     thesisPages = student.thesisPages;
