deletes another bad slash

--- a/thesis.html
+++ b/thesis.html
@@ -116,7 +116,7 @@
 
         for (var i=1; i < numberOfPagesPlusOne ; i++){
 
-            let filePath = '/images/thesis/' + studentPath + i + '.jpg';
+            let filePath = 'images/thesis/' + studentPath + i + '.jpg';
 
             thesisPage = makeThesisPage(filePath);
 
