adds missing hashes to student comic

--- a/digital/17gainey/page12.html
+++ b/digital/17gainey/page12.html
@@ -2,30 +2,30 @@
 	<head>
 		<title>Map12</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript">    
+		<script type="text/javascript">
              window.history.forward();
-             function noBack() { 
-                  window.history.forward(); 
+             function noBack() {
+                  window.history.forward();
             }
     	</script>
 	</head>
 	<body onload="noBack();" onpageshow="if (event.persisted) noBack();" onunload="">
-	
+
 		<div class="dontBreakUp">
 
 			<img src="assets/top4.jpg">
 			<img src="assets/action1.gif">
 			<img src="assets/top3.jpg">
 		</div>
-		
+
 		<br>
-		
+
 		<div class="dontBreakUp">
 			<img src="assets/bottom2.gif"
-				usemap="keenMap"
+				usemap="#keenMap"
 			>
 		</div>
-		
+
 			<map name="keenMap">
 				<area shape="rect"
 				coords="146, 144, 402, 320"
@@ -35,9 +35,9 @@
 				coords="738, 30, 989, 191"
 				href="page8.html"
 				>
-		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		
+
 	</body>
 </html>
