--- a/digital/17gainey/page4.html
+++ b/digital/17gainey/page4.html
@@ -2,31 +2,31 @@
 	<head>
 		<title>Map4</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript">    
+		<script type="text/javascript">
              window.history.forward();
-             function noBack() { 
+             function noBack() {
                   window.history.forward();
             }
         </script>
 	</head>
 	<body onload="noBack();" onpageshow="if (event.persisted) noBack();" onunload="">
-	
+
 		<div class="dontBreakUp">
 
 			<img src="assets/top5.jpg">
 			<img src="assets/action3.gif">
 			<img src="assets/top4.jpg">
 		</div>
-		
+
 		<br>
-		
+
 		<div class="dontBreakUp">
 			<img src="assets/bottom2.gif"
-				usemap="keenMap"
+				usemap="#keenMap"
 			>
 
 		</div>
-		
+
 			<map name="keenMap">
 				<area shape="rect"
 				coords="146, 144, 402, 320"
@@ -39,6 +39,6 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		
+
 	</body>
 </html>
