--- a/digital/17gainey/page7.html
+++ b/digital/17gainey/page7.html
@@ -2,15 +2,15 @@
 	<head>
 		<title>Map7</title>
 		<link rel="stylesheet" type="text/css" href="style.css">'
-		<script type="text/javascript">    
+		<script type="text/javascript">
              window.history.forward();
-             function noBack() { 
+             function noBack() {
                   window.history.forward();
             }
         </script>
 	</head>
 	<body onload="noBack();" onpageshow="if (event.persisted) noBack();" onunload="">
-	
+
 		<div class="dontBreakUp">
 
 			<img src="assets/fall1.gif">
@@ -18,15 +18,15 @@
 			<img src="assets/fall3.jpg">
 			<img src="assets/fall4.gif">
 		</div>
-		
+
 		<br>
-		
+
 		<div class="dontBreakUp">
 			<img src="assets/bottom1.gif"
-				usemap="keenMap"
+				usemap="#keenMap"
 			>
 		</div>
-		
+
 		<map name="keenMap">
 			<area shape="rect"
 			coords="95, 81, 403, 304"
@@ -36,11 +36,11 @@
 			coords="744, 36, 949, 173"
 			href="page11.html"
 			>
-			
+
 		</map>
-		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		
+
 	</body>
 </html>
