--- a/digital/17gainey/page8.html
+++ b/digital/17gainey/page8.html
@@ -2,30 +2,30 @@
 	<head>
 		<title>Map8</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript">    
+		<script type="text/javascript">
              window.history.forward();
-             function noBack() { 
+             function noBack() {
                   window.history.forward();
             }
         </script>
 	</head>
 	<body onload="noBack();" onpageshow="if (event.persisted) noBack();" onunload="">
-	
+
 		<div class="dontBreakUp">
 
 			<img src="assets/top5.jpg">
 			<img src="assets/action2.gif">
 			<img src="assets/top1.jpg">
 		</div>
-		
+
 		<br>
-		
+
 		<div class="dontBreakUp">
 			<img src="assets/bottom3.gif"
-				usemap="keenMap"
+				usemap="#keenMap"
 			>
 		</div>
-		
+
 		<map name="keenMap">
 			<area shape="rect"
 			coords="93, 38, 305, 196"
@@ -35,9 +35,9 @@
 			coords="756, 43, 928, 196"
 			href="page10.html"
 			>
-		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		
+
 	</body>
 </html>
