--- a/digital/19rodriguezm/index copy.html
+++ b/digital/19rodriguezm/index copy.html
@@ -27,7 +27,7 @@
         <img src="assests/4.jpg" alt="comic panel 4">
         
         <script
-			  src="http://code.jquery.com/jquery-3.4.1.min.js"
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
         <script src="script1.js"></script>
