--- a/digital/19rodriguezm/samplehtml.html
+++ b/digital/19rodriguezm/samplehtml.html
@@ -42,7 +42,7 @@
         </div>
         
         <script
-			  src="http://code.jquery.com/jquery-3.4.1.min.js"
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
         <script src="script.js"></script>
