--- a/digital/19rodriguezn/page7.html
+++ b/digital/19rodriguezn/page7.html
@@ -34,7 +34,7 @@
         
         <script src="dragscroll.js"></script>
         <script
-            src="http://code.jquery.com/jquery-3.4.1.min.js"
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
         <script src="script.js"></script>
