--- a/digital/18simpson/index.html
+++ b/digital/18simpson/index.html
@@ -57,11 +57,11 @@
 
 
 	<script
-		src="code.jquery.com/jquery-3.4.1.min.js"
+		src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 		crossorigin="anonymous"></script>
-		<script src="script.js"></script>
 		<script src="../_waypoints/lib/jquery.waypoints.min.js"></script>
+		<script src="script.js"></script>
 
 	</body>
 
