removes a leading slash

--- a/thesis.html
+++ b/thesis.html
@@ -48,7 +48,7 @@
 
     </div>
 
-    <a href="/directory.html">
+    <a href="directory.html">
         <div class="button" style="margin: 3em auto">
             <p>back to anthology</p>
         </div>
